export const ORDER_COMMAND_PACKAGE_NAME = "order_command"

export const ORDER_COMMAND_SERVICE_NAME = "OrderCommandService"

export const ORDER_COMMAND_PROTO_PATH = "apps/proto/order-command.proto"


// Product Command
export const PRODUCT_COMMAND_PACKAGE_NAME = "product_command"

export const PRODUCT_COMMAND_SERVICE_NAME = "ProductCommandService"

export const PRODUCT_COMMAND_PROTO_PATH = "apps/proto/product-command.proto"

// Product Query
export const PRODUCT_QUERY_PACKAGE_NAME = "product_query"

export const PRODUCT_QUERY_SERVICE_NAME = "ProductQueryService"

export const PRODUCT_QUERY_PROTO_PATH = "apps/proto/product-query.proto"